2014-06-26  Tatsuya BIZENN  <bizenn@visha.org>

	* Fix: improper initialization: add my_init() calling and drop
		load_defaults()(obsolet function?).

	* Fix: drop "set names <character set>" and now mysql_set_character_set()
		required.  So now we support MySQL 5.0.7 or later.

2011-08-10  Tatsuya BIZENN  <bizenn@kahua.org>

	* Add: mysql-stmt-res-closed?

	* Fix: handling <mysql-stmt> result set open/close properly.

2011-07-29  Tatsuya BIZENN  <bizenn@kahua.org>

	* Fix: a typo.

	* Change: Now you have to prepare database "kahua_test", user "kahua_test"
	  with password "kahua_secret" for test/dbi.scm and test/dbd.scm.

2010-01-04  Tatsuya BIZENN  <bizenn@kahua.org>

	* Add: tools/create-test-db-and-user.sql, tools/drop-test-db-and-user.sql
	  Change: test/dbd.scm
	  use "kahua_test" user and the same named database for test.
	  So add a preparing script and a cleanup script.

2009-11-20  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: dbd_mysqllib.stub, dbd_mysql.c, dbd_mysql.h,
	          dbd/mysql.scm
	  add mysql-hex-string but not yet tests.

2009-11-19  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: dbd_mysqllib.stub, dbd/mysql.scm
	  add mysql-use-result, mysql-get-ssl-cipher, mysql-ssl-set,
	  but not yet tests.

2009-11-18  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: dbd_mysqllib.stub, dbd_mysql.c, mysql_mysql.h,
	          dbd/mysql.scm, test/dbd.scm
	  add mysql-fetch-lengths, mysql-field-seek and mysql-field-tell.
	  add <mysql-row-offset>, mysql-row-seek and mysql-row-tell.

2009-11-17  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: dbd_mysqllib.stub, dbd_mysql.c, dbd_mysql.h, dbd/mysql.scm
	  add mysql-fetch-fields.

	* Change: test/dbd.scm
	  clean up code.

2009-11-16  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: dbd_mysqllib.stub, dbd/mysql.scm, test/dbd.scm
	  add mysql-fetch-field.

2009-11-10  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: configure.ac
	  add --with-mysql-config command line switch.
